--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu, macos]
-        ruby: [ head, 3.2, truffleruby, truffleruby-head ]
+        ruby: [ head, 3.2, truffleruby, truffleruby-head, jruby ]
 
     steps:
       - uses: actions/checkout@v3
