--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu, macos]
-        ruby: [ head, 3.2, truffleruby, truffleruby-head ]
+        ruby: [ head, 3.2, jruby, jruby-head, truffleruby, truffleruby-head ]
 
     steps:
       - uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu, macos]
-        ruby: [ head, 3.2, truffleruby, truffleruby-head ]
+        ruby: [ head, 3.2, jruby, jruby-head, truffleruby, truffleruby-head ]
 
     steps:
       - uses: actions/checkout@v3
